# swe-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt
e2b_swebench/: __init__.py  config.py  dataset.py  driver.py  ledger.py  logs.py  runner.py  templates.py
scripts/: build_and_verify.py  build_templates.py  run_eval.py  smoke_test.py
